# modorganizer-loot-warning-checker

./: .gitignore  Games.py  Plugin.py  README.md  manifest.json  pre-commit-config.yaml  pyproject.toml
.github/workflows/: black.yml  isort.yml  release.yml
LOOT-Warning-Checker/: CheckerPlugin.py  Games.py  Plugin.py  TogglePlugin.py  __init__.py
LOOT-Warning-Checker/lib/PyYAML-6.0.1.dist-info/: RECORD
LOOT-Warning-Checker/lib/esplugin/: __init__.py  esplugin.cp311-win_amd64.pyd  esplugin.cp312-win_amd64.pyd  esplugin.cp38-win_amd64.pyd
LOOT-Warning-Checker/lib/py_esplugin-0.1.0.dist-info/: METADATA  RECORD  WHEEL
LOOT-Warning-Checker/lib/py_esplugin-0.3.0.dist-info/: METADATA  RECORD  direct_url.json
LOOT-Warning-Checker/lib/py_esplugin-0.3.1.dist-info/: METADATA  RECORD  direct_url.json
LOOT-Warning-Checker/lib/py_esplugin-0.4.0.dist-info/: METADATA  RECORD  direct_url.json
LOOT-Warning-Checker/lib/yaml/: __init__.py
LOOT-Warning-Checker/tools/: xEdit.py
LOOT-Warning-Checker/tools/LOOT/: Conditions.py  Masterlist.py  Plugins.py  Warnings.py  __init__.py
py-esplugin/: Cargo.toml  README.md  pyproject.toml
py-esplugin/src/: lib.rs
tools/: xEdit.py
tools/LOOT/: Conditions.py  Masterlist.py  Warnings.py
